# kindle_to_anki

./: .gitignore  PRD.md  README.md  anki_importer.py  anki_reader.py  dictionary_service.py  feature.md  frequent_words.json  frequent_words.py  kindle_detector.py  kindle_reader.py  main.py  pyproject.toml
tests/: __init__.py  test_anki_importer.py  test_anki_reader.py  test_dictionary_service.py  test_frequent_words.py  test_integration.py  test_kindle_detector.py  test_kindle_reader.py
